<resources>
    <string name="app_name">Scavenger</string>
    <string name="menu_search">Search</string>
    <string name="menu_likes">Likes</string>
    <string name="menu_settings">Settings</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name_text_view">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="terms_signin">By Signing In, you agree to Scavenger\'s Terms &amp; Conditions and Privacy Policy.</string>
    <string name="terms_signup">By Signing Up, you agree to Scavenger\'s Terms &amp; Conditions and Privacy Policy.</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_in_with_facebook">Sign In with Facebook</string>
    <string name="sign_up_with_facebook">Sign Up with Facebook</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="signin_or">OR</string>
    <string name="forgot_your_password">Forgot Password?</string>
    <string name="password_hint">Password</string>
    <string name="no_account_signup">Don\'t have an account? Sign Up!</string>
    <string name="signup_header_description">Sign Up to Save Recipes so you can go back to them later!</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="passwords_do_not_match">*Passwords do not match</string>
    <string name="startup_message_1">Scavenge For Recipes!</string>
    <string name="startup_message_2">Find Recipes You\'ll Love!</string>
    <string name="startup_message_3">Add Up All The\nThyme You Can Save!</string>
    <string name="startup_message_4">Break An Egg, Make An Omelet!</string>
    <string name="startup_message_5">Check The Way Back Of The Cabinet!</string>
    <string name="no_recipes_found">UH OH… Seems like nothing was found.</string>
    <string name="no_internet_connection">No Internet connection.</string>
    <string name="not_signed_in">You are not Signed In. Sign In or Sign Up to save and view your Likes.</string>
    <string name="no_likes">You don\'t have any Likes. Go out there and discover something great!</string>
    <string name="likes_not_connected">You are not connected to the Internet. Your Likes will be loaded when you reconnect.</string>
    <string name="recipe_image_content_descr">Recipe Image</string>
    <string name="more_button_content_descr">More</string>
    <string name="recipe_like_button_content_descr">Recipe Like</string>
    <string name="servings_text">Serves %1$d</string>
    <string name="calories">Calories</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>
    <string name="protein">Protein</string>
    <string name="ingredients">Ingredients</string>
    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="view_recipe">View Recipe</string>
    <string name="edamam_branding">Edamam Branding</string>
    <string name="password_instructions_text">Please enter your email address. Reset instructions will be sent to you.</string>
    <string name="send_email_button">Send Email</string>
    <string name="report_problem_text">Please only leave feedback about Scavenger and our features. If you would like to report a specific recipe for issues regarding profanity, nudity, or language, please use the report feature on the recipe\'s card. All reports are subject to our Terms of Use.</string>
    <string name="feedback_text">Please only leave feedback about Scavenger and our features. If you would like to report a specific recipe for issues regarding profanity, nudity, or language, please use the report feature on the recipe\'s card. All reports are subject to our Terms of Use.</string>
    <string name="report_problem_edittext">What went wrong?</string>
    <string name="report_a_problem">Report a Problem</string>
    <string name="submit">Submit</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="feedback_edittext">What would you like us to improve?</string>
    <string name="facebook_app_id">505719136936823</string>
    <string name="clientId_web_googleSignIn">565312817175-cipp792csradj5qukdb836j8e9tuq7gr.apps.googleusercontent.com</string>
    <string name="back_button">Back</string>
    <string name="search_menu_copy">Copy Recipe URL</string>
    <string name="search_menu_share">Share Recipe</string>
    <string name="search_menu_report">Report…</string>
    <string name="retry_connection">Retry Connection</string>
    <string name="match_ingredients_on_search">This can occur if Match Ingredients is On</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help_center">Help Center</string>
    <string name="open_source_libraries">Open Source Libraries</string>
    <string name="libraries_we_use">Libraries We Use</string>
    <string name="osl_header_detail">The following sets forth attribution notices for third part software that may be contained in portions of the Scavenger product. We thank the open source community for all of their contributions.</string>
    <string name="picasso_license_info"><b>Picasso</b>
        \nCopyright © 2013 Square, Inc.
        \n\nLicensed under the Apache License, Version 2.0 (the "License"); You may not use this file except in compliance with the License. You may obtain a copy of the License at
        \n\n<a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a>
        \n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="google_att">License for everything not indicated as Third Party and not otherwise marked:\n\nGoogle License\nCopyright © 2014 Google, Inc. All rights reserved.\n\nRedistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:\n1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.\n2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.\nTHIS SOFTWARE IS PROVIDED BY GOOGLE, INC. ``AS IS\'\' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL GOOGLE, INC. OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.\nThe views and conclusions contained in the software and documentation are those of the authors and should not be interpreted as representing official policies, either expressed or implied, of Google, Inc.</string>
    <string name="apache_license"><b>Apache License</b>
        \nCopyright © 2020 Michael Hamm
        \n\nLicensed under the Apache License, Version 2.0 (the \"License\"); You may not use this file except in compliance with the License. You may obtain a copy of the License at
        \n\n<a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a>
        \n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="leakcanary_license"><b>Leak Canary</b>
        \nCopyright © 2015 Square, Inc.
        \n\nLicensed under the Apache License, Version 2.0 (the "License"); You may not use this file except in compliance with the License. You may obtain a copy of the License at
        \n\n<a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a>
        \n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="shimmer_license"><b>Shimmer for Android</b>
        \nBSD License
        \n\nFor shimmer-android software
        \n\nCopyright © Facebook, Inc. and its affiliates. All rights reserved.
        \n\nRedistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
        \n\n- Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
        \n\n- Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.
        \n\n- Neither the name Facebook nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.
        \n\nTHIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</string>
    <string name="retrofit_license"><b>Retrofit</b>
        \nCopyright © 2013 Square, Inc.
        \n\nLicensed under the Apache License, Version 2.0 (the "License"); You may not use this file except in compliance with the License. You may obtain a copy of the License at

        \n\n<a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a>
        \n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="main_search_background">Main Search Background</string>
    <string name="grocery_list_text1">In order to create and save your grocery list, you must Sign In or Sign Up. By Signing Up for Scavenger, you get access to not only saving your most liked recipes but you can also...</string>
    <string name="grocery_list_text2">- Add ingredients from any recipe</string>
    <string name="likes_recyclerview_content_descr">Likes List View</string>
</resources>