<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportProblem">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/reportProblem_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_a_problem"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/roboto_medium"/>

        <ImageButton
            android:id="@+id/reportProblem_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_button"
            android:background="@drawable/ic_arrow_back_black_36dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/report_textButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:padding="8dp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/dark_gray"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"/>

    </com.google.android.material.card.MaterialCardView>
    
    <EditText
        android:id="@+id/report_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/reportProblem_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="null"
        android:hint="@string/report_problem_edittext"
        android:layout_marginStart="4dp"
        android:textColor="@android:color/black"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:textSize="14sp"/>
    
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/report_editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@android:color/black"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/report_problem_text" />

</androidx.constraintlayout.widget.ConstraintLayout>