<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <androidx.cardview.widget.CardView
        android:id="@+id/forgot_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_medium"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>

        <ImageButton
            android:id="@+id/forgotPass_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_button"
            android:background="@drawable/ic_arrow_back_black_36dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/forgot_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_toolbar"
        android:text="@string/password_instructions_text"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <EditText
        android:id="@+id/forgot_editText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/forgot_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/email_address"
        android:fontFamily="@font/roboto_condensed_regular"
        android:textSize="14sp"
        android:autofillHints="@string/email_address"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgot_pass_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/forgot_editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/send_email_button"
        android:layout_marginTop="8dp"
        android:textAllCaps="false"
        android:paddingStart="72dp"
        android:paddingEnd="72dp" />

</androidx.constraintlayout.widget.ConstraintLayout>