<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpenSourceLibraries">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/osl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        app:cardElevation="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_source_libraries"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/roboto_medium"/>

        <ImageButton
            android:id="@+id/osl_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_button"
            android:background="@drawable/ic_arrow_back_black_36dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"/>

    </com.google.android.material.card.MaterialCardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/osl_toolbar"
            android:overScrollMode="never"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <TextView
                    android:id="@+id/osl_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/libraries_we_use"
                    android:textSize="24sp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/osl_header_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/osl_header"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/roboto_condensed_regular"
                    android:layout_marginTop="16dp"
                    android:text="@string/osl_header_detail" />

                <TextView
                    android:id="@+id/apache_license"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_below="@id/osl_header_detail"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/text_bg"
                    android:textColor="@android:color/black"
                    android:text="@string/apache_license"
                    android:autoLink="web"
                    android:textColorLink="@color/link_blue"/>

                <TextView
                    android:id="@+id/leak_canary_att"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_below="@id/apache_license"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/text_bg"
                    android:textColor="@android:color/black"
                    android:text="@string/leakcanary_license"
                    android:autoLink="web"
                    android:textColorLink="@color/link_blue"/>

                <TextView
                    android:id="@+id/picasso_att"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_below="@id/leak_canary_att"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/text_bg"
                    android:textColor="@android:color/black"
                    android:text="@string/picasso_license_info"
                    android:autoLink="web"
                    android:textColorLink="@color/link_blue"/>

                <TextView
                    android:id="@+id/retrofit_att"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_below="@id/picasso_att"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/text_bg"
                    android:textColor="@android:color/black"
                    android:text="@string/retrofit_license"
                    android:autoLink="web"
                    android:textColorLink="@color/link_blue"/>

                <TextView
                    android:id="@+id/rxjava_att"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_below="@id/retrofit_att"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/text_bg"
                    android:textColor="@android:color/black"
                    android:text="@string/rxjava_license"
                    android:autoLink="web"
                    android:textColorLink="@color/link_blue"/>

                <TextView
                    android:id="@+id/shimmer_att"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_below="@id/rxjava_att"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/text_bg"
                    android:textColor="@android:color/black"
                    android:text="@string/shimmer_license"
                    android:autoLink="web"
                    android:textColorLink="@color/link_blue"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_below="@id/shimmer_att"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/text_bg"
                    android:textColor="@android:color/black"
                    android:text="@string/google_att"/>

            </RelativeLayout>

        </ScrollView>

</RelativeLayout>