<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendFeedback">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/sendFeedback_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        app:cardElevation="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_feedback"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/roboto_medium"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/feedback_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_medium"
            android:backgroundTint="@android:color/white"
            android:textColor="@color/dark_gray"
            app:elevation="0dp"
            app:strokeColor="@android:color/transparent"
            app:strokeWidth="0dp"/>

    </com.google.android.material.card.MaterialCardView>

    <EditText
        android:id="@+id/feedback_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:layout_below="@id/sendFeedback_toolbar"
        android:layout_alignParentStart="true"
        android:autofillHints="null"
        android:layout_alignParentEnd="true"
        android:hint="@string/feedback_edittext"
        android:layout_marginStart="4dp"
        android:textColor="@android:color/black"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/report_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/feedback_editText"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@android:color/black"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/feedback_text" />

</RelativeLayout>