<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/GrayBackground"
    android:focusable="true"
    android:focusableInTouchMode="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LikesFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/likes_searchView"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="Search Likes"
        android:inputType="text"
        android:elevation="12dp"
        android:translationZ="12dp"
        app:iconifiedByDefault="false"
        android:background="@android:color/white"
        app:queryBackground="@android:color/transparent"/>

    <ImageView
        android:id="@+id/likes_mainBG"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/main_search_background"
        app:layout_constraintTop_toBottomOf="@id/likes_searchView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:adjustViewBounds="true"/>

    <include layout="@layout/shimmer_layout"
        android:id="@+id/likes_shimmerLayout"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/likes_searchView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="0dp"
        android:layout_width="match_parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".36"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".85"/>

    <TextView
        android:id="@+id/like_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/roboto_condensed_regular"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:gravity="center"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fav_retry_con_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:elevation="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline2"
        android:text="@string/retry_connection"
        android:layout_below="@id/like_message"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="8dp"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/likes_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:contentDescription="@string/likes_recyclerview_content_descr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/likes_searchView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:overScrollMode="never"
        android:animationCache="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>